
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2008-02-08

	* Bump required sqlite version to 3.5.4, earlier versions could
	  sometimes corrupt the database. Update install-staticdblibs.sh.
	  Bogofilter will complain when used with older versions.

	2008-01-05

	* bf_compact problem fixed.  Reported by Thomas Novin.

1.1.6	2007-11-25 (released)

	* Transaction support added for TokyoCabinet datastore.
	  (thanks to Pierre Habouzit)

	* Bump required sqlite version to 3.4.2 and fix related compiler
	  warnings. Bogofilter will complain when used with older versions.

	2007-11-22

	* Support for TokyoCabinet datastore added.
	  (thanks to Pierre Habouzit)

	2007-08-14

	* doc/README.db was updated to BerkeleyDB 4.6
	* doc/README.db: section 3.5 was added, with information on how to 
	  resolve "Logging region out of memory; you may need to increase its 
	  size", section 4.2 now documents set_lg_regionmax.

	2007-07-23

	* The upstream repository was migrated to SVN.
	  In order to check the code out, use this command (one line):
	  svn co https://bogofilter.svn.sourceforge.net/svnroot/bogofilter/trunk/bogofilter/ bogofilter

	2007-07-22

	* The install-staticdblibs.sh script was relicensed under GNU GPL v3,
	  adjusted to download Berkeley DB 4.2 from oracle.com, adds patch #5,
	  and updated to build SQLite 3.4.1. In order to for a rebuild of the
	  updated library, do: rm -rf /opt/db-4.2-lean /opt/sqlite-3-lean
	  and re-run the script.

	* The recommended minimum sqlite3 version is now 3.4.0, bogofilter will
	  warn if used with older versions. Bugs that could cause database
	  corruption in rare circumstances have been fixed in sqlite3.